-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.1, Lustre 2.11.0
-
None
-
3
-
9223372036854775807
I have one big complaint about lnetctl. Currently if you import an YAML configuration file with an error in it you get pretty much the same exact error message:
errno: -2
descr: "missing mandatory parameters"
It would be nice to know which line is actually broken instead of guessing what the problem is.
- is related to
-
LU-10554 trivial typo on lnetctl command line generates LBUG on lustre client
-
- Resolved
-